[project]
name = "taxnomy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ete3>=3.1.3",
    "ipykernel>=7.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "zai>=0.0.2",
    "zai-sdk>=0.0.4.2",
]
